src/styling/Header.css
.logo {
  width:15em;
}

.navbar {
  list-style-type: none;
  padding: 0;
  overflow: hidden;

  /* white-space: nowrap; */
  min-width: 40%;
}

.navbar-item {
  display: inline-block;
}

@media only screen and (max-width: 1200px) {
  .navbar-item {
    display: list-item;
  }

  .nav-link {
    text-align: start;
  }
}

.nav-link {
  color: white;
  font-size: 1.1em;
  display: block;
  margin-left: 2em;
  text-decoration: none;
}

.user-info {
  display: flex;
  margin-left: auto;
  align-items: center;
}

.user-photo {
  display: flex;
  align-items: center;

  height: 100px;
  width: 100px;
  display: block;
  background-image: url('../res/ACSBorder.png');
  background-size: contain;
}

.user-given-photo {
  margin-left: 17px;
  margin-top: 20px;

  display: block;
  height: 60px;
  width: 60px;
  border-radius: 50%;

  text-indent: -10000px; /* A hack to hide the broken image icon */ 
  background-image: url('../res/account-circle.svg');
  background-size: contain;
}

.profile-link {
  text-decoration: none;
}

.username {
  color: white;
  margin-left: 1.5em;
}

.header {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  text-align: center;

  padding-left: 2em;
  padding-right: 2em;
  padding-top: 0.4em;
  padding-bottom: 0.4em;
  background-color: black;
}

.optionsMenu {
  height: 1.5em;
  width:1.5em;
  margin:0% 0% 0% 50%;
  outline:none;
  border:0px;
  background-image: url("../res/images/ExpandMore.png");
  background-size:contain;
  background-color: transparent;
}

.optionsMenu:hover {
  background-image: url("../res/images/ExpandMoreHovered.png");
}

.optionsContent {
  display: block;
  position: absolute;
  background-color: #747474;
  border-radius:10px;
  margin: 0.5% 0% 0% -8%;
}

.optionsMenu:focus {
  outline:none;
}

.optionsMenu:focus + .optionsContent {
  display:block;
}

.optionsButtons {
  position: relative;
  border: none;
  padding:20px;
  width:100%;
  color:white;
  font-size:20px;
  background-color: transparent;
}

.optionsButtons:focus {
  outline: none;
}

.optionsButtons:hover {
  background-color: #222629;
  border-radius: 10px;
}

@font-face {
  font-family: 'CommissionerMedium';
  src: local('Commissioner'), url(../res/fonts/Commissioner/Commissioner-Medium.ttf) format('truetype');
}

